Refactor all modules